--- a/dashboard.html
+++ b/dashboard.html
@@ -259,32 +259,33 @@
     </p>
   </div>
 </section>
-      <!-- Settings Section -->
           <!-- Settings Section -->
       <section id="settings" class="content-section">
-        <h1>Settings</h1>
-        <div class="settings-category">
-          <h2><img src="profile.png" alt="Profile"> Profile</h2>
-          <hr>
-          <div class="settings">
+    <h1>Settings</h1>
+    <div class="settings-category">
+        <h2><img src="profile.png" alt="Profile"> Profile</h2>
+        <hr>
+        <div class="settings">
             <div class="button" id="editProfileBtn">
-                <span><img src="edit.png"><h5>Edit Profile</h5></span>
+                <span><img src="edit.png" alt="Edit Icon"></span>
+                <h5>Edit Profile</h5>
                 <span class="chevron">&gt;</span>
             </div>
             <!-- Edit Profile Modal -->
             <div id="editProfileModal" class="modal" style="display: none;">
-              <div class="modal-content">
-                <span class="close">&times;</span>
-                <h2>Edit Profile</h2>
-                <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="Enter your name">
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Enter your email">
-                <button id="saveProfileBtn">Save</button>
-              </div>
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Edit Profile</h2>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" placeholder="Enter your name">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" placeholder="Enter your email">
+                    <button id="saveProfileBtn">Save</button>
+                </div>
             </div>
-          </div>
         </div>
+    </div>
+</section>
 
         <div class="settings-category">
           <h2><img src="notification.png" alt="Notifications"> Notifications</h2>
