--- a/dashboard.html
+++ b/dashboard.html
@@ -203,6 +203,16 @@
     input:checked + .slider:before {
       transform: translateX(26px);
     }
+    
+    .settings-category {
+      margin-top: 20px;
+    }
+
+    .settings-category h2 img {
+      vertical-align: middle;
+      margin-right: 10px;
+    }
+    
   </style>
 </head>
 <body>
