--- a/dashboard.html
+++ b/dashboard.html
@@ -277,7 +277,7 @@
     <hr>
     <div class="settings">
         <div class="button" id="editProfileBtn">
-            <span><img src="edit.png" alt="Edit Icon"></span>
+            <img src="edit.png" alt="Edit Icon">
             <h5>Edit Profile</h5>
             <span class="chevron">&gt;</span>
         </div>
