--- a/dashboard.html
+++ b/dashboard.html
@@ -218,33 +218,40 @@
 
       <!-- Settings Section -->
       <section id="settings" class="content-section">
-        <h1>Settings</h1>
-        <div class="settings-category">
-          <h2><img src="profile.png" alt="Profile"> Profile</h2>
-          <hr>
-          <div class="settings">
+    <h1>Settings</h1>
+
+    <div class="settings-category">
+        <h2><img src="profile.png" alt="Profile"> Profile</h2>
+        <hr>
+        <div class="settings">
             <div class="button">
-                <span><img src="edit.png"><h5>Edit Profile</h5></span>
+                <span>
+                    <img src="edit.png" alt="Edit">
+                    <h5>Edit Profile</h5>
+                </span>
                 <span class="chevron">&gt;</span>
             </div>
-          <!-- Add Profile Settings Content Here -->
+            <!-- Add Profile Settings Content Here -->
         </div>
+    </div>
 
-        <div class="settings-category">
-          <h2><img src="notification.png" alt="Notifications"> Notifications</h2>
-          <hr>
-          <div class="notification-settings">
+    <div class="settings-category">
+        <h2><img src="notification.png" alt="Notifications"> Notifications</h2>
+        <hr>
+        <div class="notification-settings">
             <div class="notification-item">
-              <label for="notification-toggle">
-                <h5>Notifications</h5>
-              </label>
-              <label class="switch">
-                <input type="checkbox" id="notification-toggle">
-                <span class="slider"></span>
-              </label>
+                <label for="notification-toggle">
+                    <h5>Notifications</h5>
+                </label>
+                <label class="switch">
+                    <input type="checkbox" id="notification-toggle">
+                    <span class="slider"></span>
+                </label>
             </div>
-          </div>
         </div>
+    </div>
+</section>
+
 
         <div class="settings-category">
           <h2><img src="min.png" alt="More"> More</h2>
