--- a/dashboard.html
+++ b/dashboard.html
@@ -148,7 +148,7 @@
       <div class="profile" title="View Profile">
         <img src="hacker.png" alt="User Picture">
         <h3>Do it</h3>
-        <h8>Swaraj</h8>
+        <h8>User</h8>
         <hr>
       </div>
 
