--- a/s.html
+++ b/s.html
@@ -1,11 +1,11 @@
-<!-- s.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create Account</title>
-  <link rel="stylesheet" href="scri.css"> <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="scri.css"> 
 </head>
 <body>
 
@@ -31,6 +31,6 @@
     </form>
   </div>
 
-  <script src="app.js"></script> <!-- Link to your JavaScript -->
+  <script src="app.js"></script> 
 </body>
 </html>
