--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="scri.css"> <!-- Link to your CSS file -->
 </head>
 <body>
- 
+  <h1>Safestep</h1>
   <div class="container">
     <div class="heading">Sign In to Your Account</div>
     <form class="form" id="signInForm" action="javascript:void(0);">
@@ -36,4 +36,3 @@
   <script src="app.js"></script> <!-- Link to your JavaScript -->
 </body>
 </html>
-
